--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-requests==2.21.0
-werkzeug==2.0.3
-Flask==2.0.3
+requests==2.28.1
+werkzeug==2.2.2
+Flask==2.2.2
 Flask-SQLAlchemy==2.5.1
-Flask-Login==0.4.1
-w3lib==1.22.0
+Flask-Login==0.6.2
+Flask-Admin==1.6.0
+w3lib==2.0.1
